# viltrumflow

./: .env  .env.example  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt
backend/app/: auth.py  config.py  create_db.py  crud.py  database.py  db.py  main.py
backend/app/models/: models.py
backend/app/routers/: auth.py  comments.py  preferences.py  projects.py  tasks.py  users.py
backend/app/schemas/: preferences.py  schemas.py
frontend/: .dockerignore  Dockerfile  nginx.conf  package-lock.json
frontend/src/app/: app.component.ts  app.config.ts  app.routes.ts
frontend/src/app/components/dashboard/: dashboard.component.ts
frontend/src/app/components/kanban-board/: kanban-board.component.ts
frontend/src/app/components/loading-overlay/: loading-overlay.component.ts
frontend/src/app/components/loading-spinner/: loading-spinner.component.ts
frontend/src/app/components/login/: login.component.ts
frontend/src/app/components/profile/: profile.component.ts
frontend/src/app/components/projects-list/: projects-list.component.ts
frontend/src/app/components/register/: register.component.ts
frontend/src/app/components/skeleton-loader/: skeleton-loader.component.ts
frontend/src/app/guards/: auth.guard.ts
frontend/src/app/interceptors/: auth.interceptor.ts
frontend/src/app/models/: index.ts
frontend/src/app/services/: auth.service.ts  loading.service.ts  project.service.ts  task.service.ts  theme.service.ts  user.service.ts
nginx/: nginx.dev.conf
(+2 files in other folders)
